# rite

./: Cargo.toml  README.md  main.ri  module.ri  vec.ri
crates/ritec-arena/: Cargo.toml
crates/ritec-arena/src/: lib.rs
crates/ritec-ast/: Cargo.toml
crates/ritec-ast-lower/: Cargo.toml
crates/ritec-ast-lower/src/: body_lowerer.rs  error.rs  function_completer.rs  function_registerer.rs  lib.rs  module_registerer.rs  program_lowerer.rs  resolver.rs  type_lowerer.rs
crates/ritec-ast/src/: block.rs  expr.rs  generic.rs  item.rs  lib.rs  path.rs  program.rs  stmt.rs  ty.rs
crates/ritec-ast/src/expr/: mod.rs  path_expr.rs  unary_expr.rs
crates/ritec-ast/src/item/: function.rs  mod.rs
crates/ritec-ast/src/stmt/: let_stmt.rs  mod.rs
crates/ritec-codegen-llvm/: Cargo.toml
crates/ritec-codegen-llvm/src/: context.rs  function_builder.rs  lib.rs
crates/ritec-core/: Cargo.toml
crates/ritec-core/src/: arena.rs  float.rs  generic.rs  ident.rs  integer.rs  lib.rs  literal.rs  operator.rs  source_map.rs  span.rs
crates/ritec-error/: Cargo.toml
crates/ritec-error/src/: diagnostic.rs  emitter.rs  lib.rs  writer.rs
crates/ritec-hir/: Cargo.toml
crates/ritec-hir-lower/: Cargo.toml
crates/ritec-hir-lower/src/: body_lowerer.rs  error.rs  infer.rs  lib.rs  program_lowerer.rs
crates/ritec-hir/src/: block.rs  body.rs  class.rs  expr.rs  function.rs  generic.rs  intrinsic.rs  lib.rs  local.rs  module.rs  program.rs  stmt.rs  ty.rs
crates/ritec-hir/src/expr/: binary_expr.rs  local_expr.rs  mod.rs  unary_expr.rs
crates/ritec-hir/src/stmt/: let_stmt.rs  mod.rs
crates/ritec-infer/: Cargo.toml
crates/ritec-infer/src/: constraint.rs  contraint.rs  error.rs  instance.rs  lib.rs  modification.rs  register.rs  resolve.rs  solve_hir.rs  solver.rs  table.rs  ty.rs  unify.rs
crates/ritec-ir/: Cargo.toml
crates/ritec-ir/src/: body.rs  function.rs  generic.rs  lib.rs  local.rs  module.rs  program.rs  ty.rs
crates/ritec-ir/src/expr/: local_expr.rs  mod.rs  unary_expr.rs
crates/ritec-ir/src/stmt/: block.rs  let_stmt.rs  mod.rs
crates/ritec-lower/: Cargo.toml
crates/ritec-lower/src/: body.rs  error.rs  infer.rs  lib.rs  program.rs  ty.rs
crates/ritec-mir/: Cargo.toml
crates/ritec-mir-build/: Cargo.toml
crates/ritec-mir-build/src/: as_operand.rs  as_place.rs  as_value.rs  builder.rs  error.rs  function_builder.rs  lib.rs  program_builder.rs  statement.rs  ty.rs
crates/ritec-mir-build/src/thir/: builder.rs  expr.rs  mod.rs  stmt.rs
crates/ritec-mir/src/: block.rs  body.rs  class.rs  constant.rs  function.rs  generic.rs  lib.rs  local.rs  operand.rs  program.rs  statement.rs  stmt.rs  term.rs  terminator.rs  ty.rs  value.rs
crates/ritec-mir/src/expr/: mod.rs
crates/ritec-parser/: Cargo.toml
crates/ritec-parser/src/: block.rs  delimiter.rs  expr.rs  generic.rs  item.rs  keyword.rs  lexer.rs  lib.rs  parse.rs  parse_buffer.rs  path.rs  program.rs  stmt.rs  symbol.rs  token.rs  token_tree.rs  ty.rs
crates/ritec-span/: Cargo.toml
crates/ritec-span/src/: ident.rs  lib.rs  source_map.rs
src/: lib.rs  main.rs
