[package]
name = "rite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
ritec-ast = { version = "0.1.0", path = "crates/ritec-ast" }
ritec-ast-lower = { version = "0.1.0", path = "crates/ritec-ast-lower" }
ritec-core = { version = "0.1.0", path = "crates/ritec-core" }
ritec-error = { version = "0.1.0", path = "crates/ritec-error" }
ritec-hir = { version = "0.1.0", path = "crates/ritec-hir" }
ritec-hir-lower = { version = "0.1.0", path = "crates/ritec-hir-lower" }
ritec-mir = { version = "0.1.0", path = "crates/ritec-mir" }
ritec-parser = { version = "0.1.0", path = "crates/ritec-parser" }

clap = { version = "4.0", features = ["derive"] }
