[package]
name = "ritec-ast-lower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritec-ast = { version = "0.1.0", path = "../ritec-ast" }
ritec-core = { version = "0.1.0", path = "../ritec-core" }
ritec-hir = { version = "0.1.0", path = "../ritec-hir" }
