[package]
name = "ritec-codegen-llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritec-core = { version = "0.1.0", path = "../ritec-core" }
ritec-mir = { version = "0.1.0", path = "../ritec-mir" }

inkwell = { version = "=0.1.0-beta.5", features = ["llvm14-0"] }
