[package]
name = "ritec-hir-lower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritec-core = { version = "0.1.0", path = "../ritec-core" }
ritec-error = { version = "0.1.0", path = "../ritec-error" }
ritec-infer = { version = "0.1.0", path = "../ritec-infer" }
ritec-hir = { version = "0.1.0", path = "../ritec-hir" }
ritec-mir = { version = "0.1.0", path = "../ritec-mir" }
