[package]
name = "ritec-mir-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritec-core = { version = "0.1.0", path = "../ritec-core" }
ritec-hir = { version = "0.1.0", path = "../ritec-hir" }
ritec-infer = { version = "0.1.0", path = "../ritec-infer" }
ritec-mir = { version = "0.1.0", path = "../ritec-mir" }
